--- a/style.css
+++ b/style.css
@@ -32,5 +32,109 @@ body {
   border-color: black;
 }
 
-.col {
+#middle-column {
+  display: flex;
+  justify-content: center;
 }
+
+#third-column {
+  text-align: center;
+}
+
+.current-ball {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50%;
+  border-style: solid;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
+.ball-number {
+  line-height: 140px;
+  font-size: 50px;
+  font-family: "Abril Fatface", cursive;
+}
+
+#ball {
+  height: fit-content;
+  margin-top: 50%;
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+#ball:hover {
+  cursor: pointer;
+}
+
+#ball:active {
+  outline: none;
+  opacity: 50%;
+}
+
+.called-balls-container {
+  display: grid;
+  width: 100%;
+  height: 90%;
+  text-align: center;
+  background-color: transparent;
+  border: solid;
+}
+
+#balls-remaining {
+  margin-top: 3%;
+  font-family: "Abril Fatface", cursive;
+}
+
+/* .col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+
+*/
+/* .col-3 {
+  width: 25%;
+  height: 100%;
+  float: left;
+  padding: 15px;
+} */
+.col-4 {
+  width: 33.33%;
+  height: 100%;
+  float: left;
+  padding: 15px;
+}
+
+/* .col-5 {
+  width: 41.66%;
+  height: 100%;
+  float: left;
+  padding: 15px;
+} */
+/*
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+} */
