--- a/style.css
+++ b/style.css
@@ -89,6 +89,27 @@ body {
   font-family: "Abril Fatface", cursive;
 }
 
+.table-row {
+  border: solid;
+  border-color: black;
+}
+#bingotable {
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background: white;
+}
+
+th,
+td {
+  font-family: Helvetica;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid black;
+  width: 20%;
+}
+
 /* .col-1 {
   width: 8.33%;
 }
