--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ body {
   border-style: solid;
   border-color: black;
 }
-
-#middle-column {
+#first-column #middle-column {
   display: flex;
   justify-content: center;
 }
@@ -60,17 +59,29 @@ body {
 
 #ball {
   height: fit-content;
-  margin-top: 50%;
+  margin-top: 30%;
+  margin-left: 40%;
   border: none;
   background-color: transparent;
   outline: none;
 }
 
-#ball:hover {
+#card {
+  height: fit-content;
+  margin-top: 20%;
+  margin-left: 48%;
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+#ball:hover,
+#card:hover {
   cursor: pointer;
 }
 
-#ball:active {
+#ball:active,
+#card:active {
   outline: none;
   opacity: 50%;
 }
@@ -98,6 +109,7 @@ body {
   text-align: center;
   width: 100%;
   height: 100%;
+
   background: white;
 }
 
