--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
 
 body {
   background-image: url(./images/bingobackground.png);
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-position: top;
   font-family: Lato;
   font-weight: 300;
-  position: relative;
   height: 100vh;
   width: 90%;
   margin-right: auto;
@@ -22,53 +21,86 @@ body {
 }
 
 .row {
-  height: 65%;
-  width: 65%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  height: fit-content;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 13%;
+  margin-top: 20%;
   background-color: white;
   border-style: solid;
-  border-color: black;
-}
-#first-column #middle-column {
-  display: flex;
-  justify-content: center;
+  border-width: 1px;
+  border-radius: 10px;
 }
 
-#third-column {
+.col-1 {
+  flex: 1;
+}
+
+.col-2 {
+  flex: 2;
+  padding: 5%;
+}
+
+.col-3 {
+  flex: 1;
+}
+
+#balls-remaining {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  font-family: "Abril Fatface", cursive;
+  font-size: 18px;
   text-align: center;
 }
 
 .current-ball {
+  display: flex;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50%;
   border-style: solid;
+  border-width: 0.02em;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 50px;
+  height: 50px;
 }
 
 .ball-number {
-  line-height: 140px;
-  font-size: 50px;
   font-family: "Abril Fatface", cursive;
+  flex-basis: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 5%;
+  line-height: 1em;
+}
+#ball-dropper-icon {
+  height: 55px;
+  width: 55px;
+}
+
+#bingo-card-icon {
+  height: 30px;
+  width: 30px;
 }
 
 #ball {
   height: fit-content;
-  margin-top: 30%;
-  margin-left: 40%;
   border: none;
   background-color: transparent;
   outline: none;
 }
+.ball-dropper-container {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
 #card {
   height: fit-content;
-  margin-top: 30%;
   margin-left: 50%;
   border: none;
   background-color: transparent;
@@ -89,15 +121,10 @@ body {
 .called-balls-container {
   display: grid;
   width: 100%;
-  height: 90%;
+  height: 100%;
   text-align: center;
   background-color: transparent;
   border: solid;
-}
-
-#balls-remaining {
-  margin-top: 3%;
-  font-family: "Abril Fatface", cursive;
 }
 
 .table-row {
@@ -109,7 +136,6 @@ body {
   text-align: center;
   width: 100%;
   height: 100%;
-
   background: white;
 }
 
@@ -121,53 +147,3 @@ td {
   border: 1px solid black;
   width: 20%;
 }
-
-/* .col-1 {
-  width: 8.33%;
-}
-.col-2 {
-  width: 16.66%;
-}
-
-*/
-/* .col-3 {
-  width: 25%;
-  height: 100%;
-  float: left;
-  padding: 15px;
-} */
-.col-4 {
-  width: 33.33%;
-  height: 100%;
-  float: left;
-  padding: 15px;
-}
-
-/* .col-5 {
-  width: 41.66%;
-  height: 100%;
-  float: left;
-  padding: 15px;
-} */
-/*
-.col-6 {
-  width: 50%;
-}
-.col-7 {
-  width: 58.33%;
-}
-.col-8 {
-  width: 66.66%;
-}
-.col-9 {
-  width: 75%;
-}
-.col-10 {
-  width: 83.33%;
-}
-.col-11 {
-  width: 91.66%;
-}
-.col-12 {
-  width: 100%;
-} */
