--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
   background-image: url(./images/bingobackground.png);
   background-size: contain;
-  background-position: top;
+  background-position: center;
   font-family: Lato;
   font-weight: 300;
   height: 100vh;
@@ -20,130 +20,132 @@ body {
   margin-left: auto;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  width: 90%;
-  height: fit-content;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 20%;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 10px;
-}
+@media (max-width: 480px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    height: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20%;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+  }
 
-.col-1 {
-  flex: 1;
-}
+  .col-1 {
+    flex: 1;
+  }
 
-.col-2 {
-  flex: 2;
-  padding: 5%;
-}
+  .col-2 {
+    flex: 2;
+    padding: 5%;
+  }
 
-.col-3 {
-  flex: 1;
-}
+  .col-3 {
+    flex: 1;
+  }
 
-#balls-remaining {
-  margin-top: 3%;
-  margin-bottom: 3%;
-  font-family: "Abril Fatface", cursive;
-  font-size: 18px;
-  text-align: center;
-}
+  #balls-remaining {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: "Abril Fatface", cursive;
+    font-size: 18px;
+    text-align: center;
+  }
 
-.current-ball {
-  display: flex;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: solid;
-  border-width: 0.02em;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-}
+  .current-ball {
+    display: flex;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-width: 0.02em;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+  }
 
-.ball-number {
-  font-family: "Abril Fatface", cursive;
-  flex-basis: 50%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 5%;
-  line-height: 1em;
-}
-#ball-dropper-icon {
-  height: 55px;
-  width: 55px;
-}
+  .ball-number {
+    font-family: "Abril Fatface", cursive;
+    flex-basis: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 5%;
+    line-height: 1em;
+  }
+  #ball-dropper-icon {
+    height: 55px;
+    width: 55px;
+  }
 
-#bingo-card-icon {
-  height: 30px;
-  width: 30px;
-}
+  #bingo-card-icon {
+    height: 30px;
+    width: 30px;
+  }
 
-#ball {
-  height: fit-content;
-  border: none;
-  background-color: transparent;
-  outline: none;
-}
-.ball-dropper-container {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
+  #ball {
+    height: fit-content;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+  .ball-dropper-container {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
 
-#card {
-  height: fit-content;
-  margin-left: 50%;
-  border: none;
-  background-color: transparent;
-  outline: none;
-}
+  #card {
+    height: fit-content;
+    margin-left: 50%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
 
-#ball:hover,
-#card:hover {
-  cursor: pointer;
-}
+  #ball:hover,
+  #card:hover {
+    cursor: pointer;
+  }
 
-#ball:active,
-#card:active {
-  outline: none;
-  opacity: 50%;
-}
+  #ball:active,
+  #card:active {
+    outline: none;
+    opacity: 50%;
+  }
 
-.called-balls-container {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  background-color: transparent;
-  border: solid;
-}
+  .called-balls-container {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: transparent;
+    border: solid;
+  }
 
-.table-row {
-  border: solid;
-  border-color: black;
-}
-#bingotable {
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  background: white;
-}
+  .table-row {
+    border: solid;
+    border-color: black;
+  }
+  #bingotable {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background: white;
+  }
 
-th,
-td {
-  font-family: Helvetica;
-  margin: 0 auto;
-  text-align: center;
-  border: 1px solid black;
-  width: 20%;
+  th,
+  td {
+    font-family: Helvetica;
+    margin: 0 auto;
+    text-align: center;
+    border: 1px solid black;
+    width: 20%;
+  }
 }
