--- a/style.css
+++ b/style.css
@@ -20,6 +20,140 @@ body {
   margin-left: auto;
 }
 
+@media (max-width: 768px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    height: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10%;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+  }
+
+  .col-1 {
+    flex: 1;
+    margin-bottom: 5%;
+    margin-top: 2%;
+  }
+
+  .col-2 {
+    flex: 2;
+    padding: 5%;
+  }
+
+  .col-3 {
+    flex: 1;
+  }
+
+  #balls-remaining {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: "Abril Fatface", cursive;
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .current-ball {
+    display: flex;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-width: 0.02em;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+  }
+
+  .ball-number {
+    font-family: "Abril Fatface", cursive;
+    font-size: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30%;
+    line-height: 1em;
+  }
+  #ball-dropper-icon {
+    height: 75px;
+    width: 75px;
+    margin-bottom: 20%;
+  }
+
+  #bingo-card-icon {
+    height: 55px;
+    width: 55px;
+  }
+
+  #ball {
+    height: fit-content;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+  .ball-dropper-container {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  #card {
+    height: fit-content;
+    margin-left: 50%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+
+  #ball:hover,
+  #card:hover {
+    cursor: pointer;
+  }
+
+  #ball:active,
+  #card:active {
+    outline: none;
+    opacity: 50%;
+  }
+
+  .called-balls-container {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: transparent;
+    border: solid;
+  }
+
+  .table-row {
+    border: solid;
+    border-color: black;
+    height: 30px;
+  }
+  #bingotable {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background: white;
+  }
+
+  th,
+  td {
+    font-family: Helvetica;
+    margin: 0 auto;
+    text-align: center;
+    border: 1px solid black;
+    width: 20%;
+  }
+}
+
 @media (max-width: 480px) {
   .row {
     display: flex;
