--- a/style.css
+++ b/style.css
@@ -20,7 +20,159 @@ body {
   margin-left: auto;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 769px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 90%;
+    height: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20%;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
+  }
+
+  .col-1 {
+    flex: 2;
+    margin-bottom: auto;
+    margin-top: auto;
+  }
+
+  .col-2 {
+    flex: 2;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
+  .col-3 {
+    flex: 1;
+    margin-bottom: auto;
+    margin-top: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  #balls-remaining {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: "Abril Fatface", cursive;
+    font-size: 25px;
+    text-align: center;
+    align-items: center;
+
+    text-shadow: 1px 1px 1px rgb(110, 109, 109);
+  }
+
+  .current-ball {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-width: 0.2em;
+    border-radius: 50%;
+    box-shadow: 0 8px 6px -6px black;
+    width: 150px;
+    height: 150px;
+  }
+
+  .ball-number {
+    font-family: "Abril Fatface", cursive;
+    font-size: 40px;
+    margin-right: auto;
+    margin-left: auto;
+    line-height: 1em;
+  }
+  #ball-dropper-icon {
+    height: 100px;
+    width: 100px;
+    box-shadow: 0 8px 6px -6px black;
+  }
+
+  #bingo-card-icon {
+    height: 55px;
+    width: 55px;
+  }
+
+  #ball {
+    height: fit-content;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+  .ball-dropper-container {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  #card {
+    height: fit-content;
+    margin-left: 50%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+  }
+
+  #ball:hover,
+  #card:hover {
+    cursor: pointer;
+  }
+
+  #ball:active,
+  #card:active {
+    outline: none;
+    opacity: 50%;
+  }
+
+  .called-balls-container {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: transparent;
+    border: solid;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
+  }
+
+  .table-row {
+    border: solid;
+    border-color: black;
+    height: 30px;
+  }
+  #bingotable {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background: white;
+  }
+
+  th,
+  td {
+    font-family: "Abril Fatface", cursive;
+
+    margin: 0 auto;
+    text-align: center;
+    border: 1px solid black;
+    width: 20%;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
   .row {
     display: flex;
     flex-wrap: wrap;
@@ -74,7 +226,7 @@ body {
 
   .ball-number {
     font-family: "Abril Fatface", cursive;
-    font-size: 20px;
+    font-size: 25px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 30%;
@@ -146,7 +298,7 @@ body {
 
   th,
   td {
-    font-family: Helvetica;
+    font-family: "Abril Fatface", cursive;
     margin: 0 auto;
     text-align: center;
     border: 1px solid black;
