--- a/style.css
+++ b/style.css
@@ -27,14 +27,15 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    width: 90%;
+    width: 70%;
     height: fit-content;
     margin-right: auto;
     margin-left: auto;
 
-    background-color: white;
-    border-style: solid;
-    border-width: 1px;
+    background-color: rgb(42, 161, 90);
+    border-color: yellow;
+    border-style: double;
+    border-width: 0.5em;
     border-radius: 10px;
     box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
       0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
@@ -64,13 +65,16 @@ body {
 
   #balls-remaining {
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 10%;
     font-family: "Abril Fatface", cursive;
-    font-size: 25px;
+    color: yellow;
+    font-size: 30px;
     text-align: center;
+    letter-spacing: 0.1em;
+    padding-left: 10px;
+    padding-right: 10px;
     align-items: center;
-
-    text-shadow: 1px 1px 1px rgb(110, 109, 109);
+    text-shadow: 2px 2px 2px rgb(10, 10, 10);
   }
 
   .current-ball {
@@ -80,7 +84,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
-    border-width: 0.2em;
+    border-width: 0.3em;
+    border-color: black;
+    background-color: white;
     border-radius: 50%;
     box-shadow: 0 8px 6px -6px black;
     width: 150px;
@@ -98,6 +104,10 @@ body {
     height: 100px;
     width: 100px;
     box-shadow: 0 8px 6px -6px black;
+    background-color: white;
+    border: 0.3em solid black;
+    border-radius: 5%;
+    padding: 10px;
   }
 
   #bingo-card-icon {
@@ -143,6 +153,7 @@ body {
     text-align: center;
     background-color: transparent;
     border: solid;
+    border-radius: 5px;
     box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
       0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
       0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
@@ -159,16 +170,26 @@ body {
     text-align: center;
     width: 100%;
     height: 100%;
-    background: white;
+    background: black;
   }
 
   th,
   td {
     font-family: "Abril Fatface", cursive;
+    font-size: 20px;
     margin: 0 auto;
     text-align: center;
     border: 1px solid black;
     width: 20%;
+  }
+
+  tr {
+    height: 50px;
+    background-color: white;
+  }
+  th {
+    background-color: rgb(42, 161, 90);
+    color: yellow;
   }
 }
 
