--- a/cardstyle.css
+++ b/cardstyle.css
@@ -5,14 +5,8 @@
 }
 
 body {
-  background-image: url(./images/bingobackground.png);
-  background-size: cover;
-  background-position: center;
-  font-family: Lato;
-  font-weight: 300;
   height: 100vh;
   width: 90%;
-  padding-top: 8%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -20,26 +14,26 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 50%;
-  height: 600px;
+  width: 60%;
   background: black;
-  border: 1em solid rgb(42, 161, 90);
-  border-radius: 10px;
+  border: 0.02em solid rgb(42, 161, 90);
+  border-radius: 5px;
+  margin-top: 2%;
 }
 
 th,
 td {
   font-family: "Abril Fatface", cursive;
-  font-size: 60px;
+  font-size: 50px;
   margin: 0 auto;
   text-align: center;
   border: 1px solid black;
-
   width: 20%;
 }
 
 tr {
-  height: 50px;
+  height: 90px;
+  width: 20%;
   background-color: white;
 }
 th {
