--- a/cardstyle.css
+++ b/cardstyle.css
@@ -36,6 +36,11 @@ td {
   width: 20%;
 }
 
+td:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
 tr {
   height: 90px;
   width: 20%;
@@ -57,6 +62,7 @@ button {
   padding: 3px;
   background-color: white;
   border-radius: 5px;
+  font-family: "Abril Fatface", cursive;
 }
 
 #trigger:active {
@@ -66,4 +72,8 @@ button {
 
 #trigger:focus {
   outline: none;
+}
+
+.myClass {
+  color: red;
 }
